<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">AMPT</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address : </string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Dog Search</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Search</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string-array name="roygbiv">
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
    </string-array>
    <string name="button">Send</string>
    <string name="red_slide">Red</string>
    <string name="blue_slide">Blue</string>
    <string name="green_slide">Green</string>

    <string name="add_item">ADD NEW DEVICE</string>
    <string name="item_name">AMPT ANIMAL 9330</string>

    <!-- Add Dog Profile -->
    <string name="camera_btn">Select Image</string>
    <string name="gallery_btn">Gallery</string>
    <string name="lbl_device_name">Device Name : </string>
    <string name="lbl_dog_name">Name : </string>
    <string name="lbl_age">Age : </string>
    <string name="save_btn">Save</string>
    <string name="update_btn">Update</string>
    <string name="cancel_btn">Cancel</string>
    <string name="delete_btn">Remove</string>
    <string name="title_save">Save Profile</string>
    <string name="title_update">Update Profile</string>
    <string name="save_error">Could not save profile</string>

    <!-- View Dog Profile -->
    <string name="profile_btn_edit">Edit Profile</string>
    <string name="profile_lbl_name">Name</string>
    <string name="profile_lbl_age">Age</string>
    <string name="profile_lbl_today_activity">Today Activity</string>
    <string name="profile_lbl_sleep">Sleep</string>
    <string name="profile_lbl_dflt">0h 0min</string>
    <string name="profile_lbl_name_dflt">No name</string>
    <string name="profile_lbl_age_dflt">0</string>
    <string name="profile_lbl_walk">Walk</string>
    <string name="profile_lbl_play">Play</string>
    <string name="profile_lbl_swim">Swimming</string>
    <string name="profile_lbl_sync">Sync</string>
    <string name="profile_lbl_activity">Activity</string>
    <string name="profile_lbl_pack">Pack</string>
    <string name="profile_title">Profile</string>

    <string name="spinner_title">Select Range</string>




</resources>
