<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="146dp"
            android:weightSum="1"
            android:layout_margin="5dp"
            android:padding="5dp">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/dog_image_edit"
                android:layout_gravity="center|top"
                android:background="#CCCCCC"
                android:padding="1dp"
                android:src="@drawable/pack_btn"/>

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_btn"
                android:id="@+id/select_image"
                android:background="#ff3b3a38"
                android:textColor="#fffb8721"
                android:padding="3dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:weightSum="1"></LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff3b3a38"
            android:padding="5dp"
            android:layout_weight="0.69"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lbl_device_name"
                    android:id="@+id/textView"
                    android:textColor="#ff5176a0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_device_address"
                    android:id="@+id/textView25"
                    android:textColor="#ff5176a0" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/lbl_device_name"
                    android:textColor="#fffb8721" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/lbl_device_address"
                    android:textColor="#fffb8721" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_weight="0.2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="148dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dog_name_edit"
                    android:hint="Dog Name" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edit_age_value"
                    android:hint="Dog Age" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dog_goal_edit"
                    android:hint="Goal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:weightSum="1"
            android:paddingBottom="2dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50"></LinearLayout>

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save_btn"
                    android:id="@+id/save_edit_btn"
                    android:layout_weight="0.05" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_btn"
                        android:id="@+id/delete_btn" />
                </LinearLayout>

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_btn"
                    android:id="@+id/cancel_btn" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50"></LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>